BUG : Fix settings for running test on mac os.

--- a/macos.yml
+++ b/macos.yml
@@ -1,4 +1,3 @@
-xvfb: false
 postgres_folder: /usr/local/bin
 postgres_version: 9.4.2
 redis_version: 3.0.1
@@ -10,3 +9,6 @@ systembits: 64
 platform: darwin
 requires_internet: False
 startup_timeout: 45
+python_versions:
+  - 2.7
+  - 3.4
