Updated hitchreqs.txt and removed packages and ports which can be specified directly in plugins.

--- a/settings.yml
+++ b/settings.yml
@@ -9,49 +9,10 @@ python_versions:
   - 2.7.10
   - 3.4.3
 environment:
+  - i_am_root: false
   - approved_platforms:
     - linux
     - darwin
-  - freeports:
-    - 10025
-    - 18080
-    - 15432
-    - 16379
-  - brew:
-    - libtool
-    - automake
-    - node
-  - debs:
+  - packages:
     - firefox
     - node-less
-    - automake
-    - libtool
-    - libreadline6
-    - libreadline6-dev
-    - zlib1g-dev
-    - libxml2
-    - libxml2-dev
-    - python3
-    - python-setuptools
-    - python3-dev
-    - python-virtualenv
-    - python-pip 
-    - firefox
-    - node-less
-    - automake
-    - libtool
-    - libreadline6
-    - libreadline6-dev
-    - zlib1g-dev
-    - libxml2
-    - libxml2-dev
-    - make
-    - build-essential
-    - libssl-dev
-    - libbz2-dev
-    - libreadline-dev
-    - libsqlite3-dev
-    - wget
-    - curl
-    - llvm
-    - libpq-dev
